Bug 282271 - Contact Applet does not have review comments incorporated.
Summary: Contact Applet does not have review comments incorporated.
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contact-applet (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks: 282193
  Show dependency treegraph
 
Reported: 2011-09-18 12:18 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2011-09-18 12:18:28 UTC
As it was a new repo it skipped review board.

First round of comments were made here:
http://comments.gmane.org/gmane.comp.kde.devel.telepathy/2272

Current code _needs_ tidying.
Comment 1 Francesco Nwokeka 2011-10-04 13:02:41 UTC
Git commit 6559eb016b894a4ad16a30bfedcf80652bb65412 by Francesco Nwokeka.
Committed on 04/10/2011 at 15:03.
Pushed by nwokeka into branch 'master'.

Changed accountPtr retrieval method

with this i finish off the last of the bugs for 282271

Reviewed by: David Edmundson
BUG: 282271

M  +3    -17   src/telepathy-contact.cpp
M  +1    -3    src/telepathy-contact.h

http://commits.kde.org/telepathy-contact-applet/6559eb016b894a4ad16a30bfedcf80652bb65412