Changed accountPtr retrieval method

with this i finish off the last of the bugs for 282271

Reviewed by: David Edmundson
BUG: 282271